# jaces

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TEST_DAY.md  biome.json  docker-compose.prod.yml  docker-compose.yml  reset-git-history.sh
.zed/: settings.json
docs/: README.md  docs.json
notebooks/: pyproject.toml
scripts/: deploy-ec2-setup.sh  generate_registry.py  init-db.sql  minio-entrypoint.sh  seed_google_calendar_signal.sql
sources/base/: Dockerfile  celerybeat-schedule  pyproject.toml
sources/base/auth/: __init__.py  oauth.py
sources/base/generated_models/: __init__.py  base.py  episodic_signals.py  events.py  ingestion_runs.py  pipeline_activities.py  semantic_configs.py  semantic_signals.py  semantics.py  signal_boundaries.py  signal_configs.py  signal_transitions.py  signals.py  source_configs.py  sources.py  stream_configs.py  streams.py
sources/base/interfaces/: detector.py  processor.py  sync.py
sources/base/models/: __init__.py  base.py
sources/base/processing/: __init__.py  app.py  base_normalizer.py  dedup.py  normalization.py  validation.py
sources/base/processing/signal_analysis/: __init__.py  analyzer.py  utils.py
sources/base/processing/signal_analysis/strategies/: __init__.py  ambient.py
sources/base/scheduler/: celery_app.py  startup.py
sources/base/scheduler/tasks/: __init__.py  maintenance_tasks.py  process_streams.py  signal_analysis.py  sync_sources.py  token_refresh.py
sources/base/storage/: __init__.py  database.py  minio.py
sources/base/transitions/: __init__.py  categorical.py  pelt.py
(+256 files in other folders)
